# r-parif

./: .travis.yml  Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  objects.rs
tests/: integration_test.rs
