[package]
name = "rparif"
version = "0.1.0"
authors = ["Dalvany <Dalvany@users.noreply.github.com>"]
edition = "2018"
description = "Library that allow to access AirParif services."
documentation = "https://docs.rs/rparif/"
repository = "https://github.com/Dalvany/r-parif"
homepage = "https://github.com/Dalvany/r-parif"
readme = "README.md"
license = "MIT"
keywords = ["pollution", "airparif"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
json = "0.12"
chrono = {version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
httpmock = "0.3"
env_logger = "0.7"
version-sync = "0.9"